add antlr grammar

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'application'
+apply plugin: 'antlr'
 
 mainClassName = "com.synopsys.homework.Calculator"
 
@@ -16,4 +17,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
+    antlr "org.antlr:antlr4:4.5"
 }
